indentaion du fichier html

--- a/cv_en_site_web.html
+++ b/cv_en_site_web.html
@@ -1,151 +1,225 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" href="cv_en_site_web.css">
-		<script src="https://kit.fontawesome.com/7362aa41ff.js" crossorigin="anonymous"></script>
-		<title>CV William KOUMESSI</title>
-	</head>
-		
-	<body>
-		<div id="bloc_page" >
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="cv_en_site_web.css" />
+    <script
+      src="https://kit.fontawesome.com/7362aa41ff.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>CV William KOUMESSI</title>
+  </head>
 
-			<header>
-				<div class="box_header">
-					<div class="cadre_photo_didentite">
-						<img class="photo_didentite" src="photo_didentite.png" alt="Photo de William" title="Photo de William KOUMESSI">
-					</div>
-					<div class="prenom_nom">
-						<h1><span class="prenom">WILLIAM</span> <span class="nom">KOUMESSI</span></h1>
-						<h2><span class="devel">Dével</span>oppeur web freelance</h2>
-					</div>
-				</div>
-			</header>
+  <body>
+    <div id="bloc_page">
+      <header>
+        <div class="box_header">
+          <div class="cadre_photo_didentite">
+            <img
+              class="photo_didentite"
+              src="photo_didentite.png"
+              alt="Photo de William"
+              title="Photo de William KOUMESSI"
+            />
+          </div>
+          <div class="prenom_nom">
+            <h1>
+              <span class="prenom">WILLIAM</span>
+              <span class="nom">KOUMESSI</span>
+            </h1>
+            <h2><span class="devel">Dével</span>oppeur web freelance</h2>
+          </div>
+        </div>
+      </header>
 
-			<section>
-				<div class="contact_formation"> 
-					<div class="contact">
-						<h3>CONTACT</h3>
-							<address>
-								<ul class="liste_contact">
-									<li class="adresse_block"><p>Adresse</p><a class="adresse" href="https://fr.wikipedia.org/wiki/Orl%C3%A9ans">Orléans, France</a></li>
-									<li class="tel_block"><p>Téléphone</p><a class="tel" href="tel:+13115552368">(311) 555-2368</a></li>
-									<li class="mail_block"><p>Email</p><a class="mail" href="mailto:jim@rock.com">jim@rock.com</a></li>
-		  							<li class="site_block"><p>Site web</p><a class="lien_site_web" href="">.com</a></li>
-		  						</ul>
-		  					</address>
-					</div>
-					<div class="formation">
-						<div class="icone_formation">
-							<i class="fas fa-graduation-cap"></i>
-							<h3>FORMATION</h3>
-						</div>
-						<div class="trait_formation"></div>
-						<div class="contenu_formation">
-							<ul class="date_ville_formation">
-								<li class="date">2020</li>
-								<li class="ville">Paris</li>
-							</ul>
-							<div class="nom_formation">
-								<h4><a href="https://openclassrooms.com">OPENCLASSROOMS</a></h4>
-								<h5><a href="https://openclassrooms.com/fr/paths/185-developpeur-web">Développeur web</a></h5>
-								<p>OpenClassrooms est un établissement privé d'enseignement à distance déclaré au rectorat de l'Académie de Paris, délivrant ses propres diplômes ainsi que ceux d'autres partenaires académiques prestigieux.<br>
-								À l'issue de ma formation et de la validation de mes compétences par le jury du diplôme, j'ai obtenu le diplôme "Développeur web" <a class="lien_parcours" href="https://www.certificationprofessionnelle.fr/recherche/rncp/32173">enregistré au Répertoire National des Certifications Professionnelles</a>.<br>
-								Ce diplôme est de niveau 5 (Bac+2) sur les cadres français et européen des certifications (European Qualifications Framework).</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
+      <section>
+        <div class="contact_formation">
+          <div class="contact">
+            <h3>CONTACT</h3>
+            <address>
+              <ul class="liste_contact">
+                <li class="adresse_block">
+                  <p>Adresse</p>
+                  <a
+                    class="adresse"
+                    href="https://fr.wikipedia.org/wiki/Orl%C3%A9ans"
+                    >Orléans, France</a
+                  >
+                </li>
+                <li class="tel_block">
+                  <p>Téléphone</p>
+                  <a class="tel" href="tel:+13115552368">(311) 555-2368</a>
+                </li>
+                <li class="mail_block">
+                  <p>Email</p>
+                  <a class="mail" href="mailto:jim@rock.com">jim@rock.com</a>
+                </li>
+                <li class="site_block">
+                  <p>Site web</p>
+                  <a class="lien_site_web" href="">.com</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="formation">
+            <div class="icone_formation">
+              <i class="fas fa-graduation-cap"></i>
+              <h3>FORMATION</h3>
+            </div>
+            <div class="trait_formation"></div>
+            <div class="contenu_formation">
+              <ul class="date_ville_formation">
+                <li class="date">2020</li>
+                <li class="ville">Paris</li>
+              </ul>
+              <div class="nom_formation">
+                <h4><a href="https://openclassrooms.com">OPENCLASSROOMS</a></h4>
+                <h5>
+                  <a
+                    href="https://openclassrooms.com/fr/paths/185-developpeur-web"
+                    >Développeur web</a
+                  >
+                </h5>
+                <p>
+                  OpenClassrooms est un établissement privé d'enseignement à
+                  distance déclaré au rectorat de l'Académie de Paris, délivrant
+                  ses propres diplômes ainsi que ceux d'autres partenaires
+                  académiques prestigieux.<br />
+                  À l'issue de ma formation et de la validation de mes
+                  compétences par le jury du diplôme, j'ai obtenu le diplôme
+                  "Développeur web"
+                  <a
+                    class="lien_parcours"
+                    href="https://www.certificationprofessionnelle.fr/recherche/rncp/32173"
+                    >enregistré au Répertoire National des Certifications
+                    Professionnelles</a
+                  >.<br />
+                  Ce diplôme est de niveau 5 (Bac+2) sur les cadres français et
+                  européen des certifications (European Qualifications
+                  Framework).
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-			<section>
-				<div class="presentation_competences">
-					<div class="presentation">
-						<h3>A PROPOS DE MOI</h3>
-						<p>Je suis un jeune actif de 22 ans ayant grandis à Orléans. La littérature, le sport et la musique rythment ma vie.<br> Récemment diplômé en développement web, je suis cependant inséré dans le monde du travail depuis l’âge de 18 ans. Le fait de développer des compétences professionnelles concrètes, d’assumer certaines responsabilités et de gagner ma vie m’a rapidement permis de gagner en maturité.<br>
-						Allié à un tempérament hardi et contemplatif, ce parcours de vie a suscité en moi un fort désir d’accomplissement et d’autonomie. C’est dans cet état d’esprit que j’ai choisis de me former pour travailler dans ce vaste domaine qu’est le développement web.</p>
-					</div>
-					<div class="competences">
-						<div class="icone_competences">
-							<i class="fas fa-file-alt"></i>
-							<h3>COMPETENCES</h3>
-						</div>
-						<div class="trait_competences"></div>
-							<ul class="liste_competences">
-								<li>Intégrer une page web depuis une maquette</li>
-									<p class="sous_competences">1.1 Définir la structure d'une page web à partir d'une maquette<br>
-										1.2 Préparer des éléments graphiques et textuels à intégrer à une page web à partir d'une maquette<br>
-										1.3 Intégrer du contenu conformément à une maquette<br>
-										1.4 Adapter l'affichage d'un site web à des écrans de petite taille<br>
-										1.5 Assurer la conformité d'une page web aux standards HTML et CSS<br>
-										1.6 Utiliser un système de gestion de versions pour le suivi du projet et son hébergement
-									</p>
-								<li>Créer un site web multi pages</li>
-									<p class="sous_competences">2.1 Développer chaque page d'un site web de manière cohérente et structurée<br>
-										2.2 Assurer la cohérence graphique d'un site web<br>
-										2.3 Mettre en œuvre un effet graphique avancé en CSS	
-									</p>
-								<li>Optimiser la visibilité d'un site web</li>
-									<p class="sous_competences">3.1 Réaliser une veille portant sur les bonnes pratiques en développement web<br>
-										3.2 Optimiser le référencement d'un site web<br>
-										3.3 Écrire un code HTML et CSS à jour et maintenable<br>
-										3.4 Optimiser la taille et la vitesse d'un site web<br>
-										3.5 Assurer l'accessibilité d'un site web
-									</p>
-								<li>Interagir avec l'utilisateur et des services externes en JavaScript</li>
-									<p class="sous_competences">4.1 Gérer des évènements en JavaScript<br>
-										4.2 Interagir avec un web service en JavaScript<br>
-										4.3 Valider et nettoyer les données issues de sources externes
-									</p>
-								<li>Assurer en interne la bonne gestion des données</li>
-									<p class="sous_competences">5.1 Implémenter un modèle logique de données conformément à la réglementation
-										5.2 Mettre en œuvre des opérations CRUD de manière sécurisée<br>
-										5.3 Stocker des données de manière sécurisée<br>
-										5.4 Authentifier un utilisateur et maintenir sa session<br>
-										5.5 Personnaliser le contenu envoyé à un client web
-									</p>
-							</ul>
-					</div>
-				</div>
-			</section>			
+      <section>
+        <div class="presentation_competences">
+          <div class="presentation">
+            <h3>A PROPOS DE MOI</h3>
+            <p>
+              Je suis un jeune actif de 22 ans ayant grandis à Orléans. La
+              littérature, le sport et la musique rythment ma vie.<br />
+              Récemment diplômé en développement web, je suis cependant inséré
+              dans le monde du travail depuis l’âge de 18 ans. Le fait de
+              développer des compétences professionnelles concrètes, d’assumer
+              certaines responsabilités et de gagner ma vie m’a rapidement
+              permis de gagner en maturité.<br />
+              Allié à un tempérament hardi et contemplatif, ce parcours de vie a
+              suscité en moi un fort désir d’accomplissement et d’autonomie.
+              C’est dans cet état d’esprit que j’ai choisis de me former pour
+              travailler dans ce vaste domaine qu’est le développement web.
+            </p>
+          </div>
+          <div class="competences">
+            <div class="icone_competences">
+              <i class="fas fa-file-alt"></i>
+              <h3>COMPETENCES</h3>
+            </div>
+            <div class="trait_competences"></div>
+            <ul class="liste_competences">
+              <li>Intégrer une page web depuis une maquette</li>
+              <p class="sous_competences">
+                1.1 Définir la structure d'une page web à partir d'une
+                maquette<br />
+                1.2 Préparer des éléments graphiques et textuels à intégrer à
+                une page web à partir d'une maquette<br />
+                1.3 Intégrer du contenu conformément à une maquette<br />
+                1.4 Adapter l'affichage d'un site web à des écrans de petite
+                taille<br />
+                1.5 Assurer la conformité d'une page web aux standards HTML et
+                CSS<br />
+                1.6 Utiliser un système de gestion de versions pour le suivi du
+                projet et son hébergement
+              </p>
+              <li>Créer un site web multi pages</li>
+              <p class="sous_competences">
+                2.1 Développer chaque page d'un site web de manière cohérente et
+                structurée<br />
+                2.2 Assurer la cohérence graphique d'un site web<br />
+                2.3 Mettre en œuvre un effet graphique avancé en CSS
+              </p>
+              <li>Optimiser la visibilité d'un site web</li>
+              <p class="sous_competences">
+                3.1 Réaliser une veille portant sur les bonnes pratiques en
+                développement web<br />
+                3.2 Optimiser le référencement d'un site web<br />
+                3.3 Écrire un code HTML et CSS à jour et maintenable<br />
+                3.4 Optimiser la taille et la vitesse d'un site web<br />
+                3.5 Assurer l'accessibilité d'un site web
+              </p>
+              <li>
+                Interagir avec l'utilisateur et des services externes en
+                JavaScript
+              </li>
+              <p class="sous_competences">
+                4.1 Gérer des évènements en JavaScript<br />
+                4.2 Interagir avec un web service en JavaScript<br />
+                4.3 Valider et nettoyer les données issues de sources externes
+              </p>
+              <li>Assurer en interne la bonne gestion des données</li>
+              <p class="sous_competences">
+                5.1 Implémenter un modèle logique de données conformément à la
+                réglementation 5.2 Mettre en œuvre des opérations CRUD de
+                manière sécurisée<br />
+                5.3 Stocker des données de manière sécurisée<br />
+                5.4 Authentifier un utilisateur et maintenir sa session<br />
+                5.5 Personnaliser le contenu envoyé à un client web
+              </p>
+            </ul>
+          </div>
+        </div>
+      </section>
 
-			<footer>
-				<div class="loisirs_portfolio">
-					<div class="loisirs">
-						<h3>LOISIRS</h3>
-						<div class="icones_loisirs">
-							<i class="fas fa-dumbbell"></i>
-							<i class="fas fa-music"></i>
-							<i class="fas fa-book-reader"></i>
-						</div>
-					</div>
-					<div class="portfolio">
-						<div class="icone_portfolio">	
-							<i class="fas fa-laptop-code"></i>
-							<h3>PORTFOLIO</h3>
-						</div>
-						<div class="trait_portfolio"></div>
-						<div class="contenu_portfolio">
-							<div  class="liste_portfolio_1">
-								<ul>
-									<li>Transformation de mon CV en site web</li>
-									<li>Optimisation d'un site web existant</li>
-									<li>Construction d'une API sécurisée pour une application d'avis gastronomiques</li>
-								</ul>
-							</div>
-							<div class="liste_portfolio_2">
-								<ul>
-									<li>Dynamisation d'une page web avec des animations CSS</li>
-									<li>Construction d'un site e-commerce</li>
-									<li>Création d'un réseau social d'entreprise</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					
-				</div>
-			</footer>
-
-		</div>
-	</body>
+      <footer>
+        <div class="loisirs_portfolio">
+          <div class="loisirs">
+            <h3>LOISIRS</h3>
+            <div class="icones_loisirs">
+              <i class="fas fa-dumbbell"></i>
+              <i class="fas fa-music"></i>
+              <i class="fas fa-book-reader"></i>
+            </div>
+          </div>
+          <div class="portfolio">
+            <div class="icone_portfolio">
+              <i class="fas fa-laptop-code"></i>
+              <h3>PORTFOLIO</h3>
+            </div>
+            <div class="trait_portfolio"></div>
+            <div class="contenu_portfolio">
+              <div class="liste_portfolio_1">
+                <ul>
+                  <li>Transformation de mon CV en site web</li>
+                  <li>Optimisation d'un site web existant</li>
+                  <li>
+                    Construction d'une API sécurisée pour une application d'avis
+                    gastronomiques
+                  </li>
+                </ul>
+              </div>
+              <div class="liste_portfolio_2">
+                <ul>
+                  <li>Dynamisation d'une page web avec des animations CSS</li>
+                  <li>Construction d'un site e-commerce</li>
+                  <li>Création d'un réseau social d'entreprise</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
