modification de la gestion d'alignement dicon

--- a/index-test.html
+++ b/index-test.html
@@ -53,32 +53,37 @@
 
     <!--The fourth of the left bloc <div> contains hobbies icons-->
 
-                <section>
-                    <h2 class="left-bloc-hobbies-title">LOISIRS</h2>
-                    <div class="left-bloc-hobbies-icons">
-                        <div class="partie1">
-                            <div class="cercle">
-                                <div class="container-icon">
-                                    <i class="fas fa-dumbbell"></i>
-                                </div>
-                            </div>
+        <section>
+            <h2 class="left-bloc-hobbies-title">LOISIRS</h2>
+            <div class="ctn">
+                <div class="ctn-item">
+                    <div class="ctn-item--iconsCtn">
+                        <div class="ctn-icon-relatif">
+                            <i class=" fas fa-dumbbell ctn-icon-absolue"></i>
                         </div>
-                        <div class="partie2">
-                            <div class="cercle">
-                                <div class="container-icon">
-                                    <i class="fas fa-music"></i>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="ctn-item">
+                    <div class="ctn-item--iconsCtn">
+                        <div class="ctn-icon-relatif">
+                            <i class=" fas fa-music ctn-icon-absolue"></i>
                         </div>
-                        <div class="partie3">
-                            <div class="cercle">
-                                <div class="container-icon">
-                                    <i class="fas fa-book-reader"></i>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="ctn-item">
+                    <div class="ctn-item--iconsCtn">
+                        <div class="ctn-icon-relatif">
+                            <i class=" fas fa-book-reader ctn-icon-absolue"></i>
                         </div>
-                    </div>    
-                </section>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="left-bloc-hobbies-icons">
+                <div class="hobbies-icons"><i class="fas fa-dumbbell"></i></div>
+                <div class="hobbies-icons"><i class="fas fa-music"></i></div>
+                <div class="hobbies-icons"><i class="fas fa-book-reader"></i></div>
+            </div>     -->
+        </section>
 
             </article>
 
